--- a/style.css
+++ b/style.css
@@ -14,4 +14,31 @@ body {
   p {
     font-size: 20px;
   }
+
+/* 橫幅圖片 */
+.banner-container {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    margin-bottom: 20px;
+  }
+  
+  .banner {
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+    scroll-snap-align: start;
+    margin-right: 10px;
+    border-radius: 12px;
+  }
+  
+  /* 大頭貼 */
+  .avatar {
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 4px solid #0077cc;
+    margin-bottom: 20px;
+  }
   
