--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
     width: 100%;
     max-height: 250px;
     border-radius: 12px;
-    object-fit: cover;
+    object-fit: contain;
     scroll-snap-align: center;
     flex-shrink: 0;
   }
